--- a/Configs/Syslog_Logstash.conf
+++ b/Configs/Syslog_Logstash.conf
@@ -16,7 +16,7 @@ filter {
       "alertname" => "description"
       "computername" => "hostname"
       "computerip" => "source_ip"
-      "severity" => "severity"
+      "everity" => "severity"
     }
     gsub => [
       "severity", "1", "High"
